--- a/src/styles/checkout.scss
+++ b/src/styles/checkout.scss
@@ -43,6 +43,13 @@
         padding: 15px 24px;
       }
     }
+    &-lab{
+      display: flex;
+      column-gap: 14px;
+      align-items: center;
+      font-size: 17px;
+      letter-spacing: 0.02em;
+    }
     &-label {
       display: flex;
       column-gap: 14px;
@@ -52,6 +59,9 @@
       input {
         width: 22px;
         height: 22px;
+      }
+      &__input{
+        width: 200px;
       }
     }
     &-btn {
